--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.data.rest.base-path=/api
 spring.jpa.show-sql=true
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=validate
+#flyway.baseline-on-migrate=true
+#flyway.baseline-version=1.0
+logging.level.org.flywaydb=debug
